# memstrata

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
browser-extension/: esbuild.config.js  manifest.json  package-lock.json  package.json  tsconfig.json
browser-extension/public/: styles.css
browser-extension/src/: service_worker.ts
browser-extension/src/content/: universal_content_script.ts
browser-extension/src/content/config/: ConfigLoader.ts  provider_hints.json
browser-extension/src/content/engine/: DetectorChain.ts  SessionDetector.ts  ShadowPiercer.ts  StreamWatcher.ts  Telemetry.ts  TurnExtractor.ts  types.ts
browser-extension/src/content/engine/detectors/: AriaLiveDetector.ts  SemanticAttrDetector.ts  StructuralDetector.ts  VelocityDetector.ts
browser-extension/src/content/shared/: DiffView.ts  NLCommandConfirmDialog.ts  NLCommandDetector.ts  RewriteEngine.ts  augmenter.ts  memory_layer_client.ts  memstrata_client.ts  observer.ts
browser-extension/src/options/: options.html  options.ts
browser-extension/src/popup/: popup.html  popup.ts
browser-extension/src/shared/: FeatureGate.ts  TierGate.ts  dedup.ts
browser-extension/test/: smoke.test.ts
browser-extension/test/dedup/: TurnDedup.test.ts
browser-extension/test/engine/: DetectorChain.test.ts  SessionDetector.test.ts  ShadowPiercer.test.ts  StreamWatcher.test.ts
browser-extension/test/engine/detectors/: AriaLiveDetector.test.ts  SemanticAttrDetector.test.ts  StructuralDetector.test.ts  VelocityDetector.test.ts
browser-extension/test/shared/: NLCommandDetector.test.ts  RewriteEngine.test.ts  TierGate.test.ts
docs/: architecture.md  browser-extension.md  cli.md  data-model.md  hard-rules.md  mcp-server.md  repository-split.md
memory_layer/: __init__.py
memory_layer/cli/: cd_hook.py  main.py
memory_layer/config/: keychain.py
memory_layer/layer3/: _db.py  api_server.py  feature_gate.py  mcp_server.py
memory_layer/layer3/baseline/: cohort.py
memory_layer/layer3/pricing/: lookup.py  openrouter_sync.py  pricing_matrix.json
memstrata/: __init__.py
memstrata/cli/: cd_hook.py  ingest.py  main.py
memstrata/config/: keychain.py
memstrata/layer3/: _db.py  api_server.py  mcp_app.py  mcp_server.py  ollama_health.py  retrieval.py
memstrata/layer3/ingestion/: __init__.py  branch_switch.py  chunker.py  denylist.py  lifecycle.py  orchestrator.py  progress.py  resource_policy.py  watcher.py
memstrata/layer3/pricing/: fx.py  lookup.py  openrouter_sync.py  pricing_matrix.json
memstrata/workers/: embedding_worker.py
migrations/: 011_v5_4_chat_sessions.sql
tests/: conftest.py  test_api_server.py  test_cd_hook_generation.py  test_cd_hook_idempotent.py  test_cli_register.py  test_codebase_ingest.py  test_e2e_multi_session.py  test_keychain.py  test_mcp_server.py  test_ollama_health.py  test_phase_34_embedding.py  test_phase_34_retrieval.py  test_shutdown_endpoint.py  test_telemetry_edge_cases.py
tests/ingestion/: test_branch_switch.py  test_chunker.py  test_denylist.py  test_lifecycle.py  test_max_ram.py  test_orchestrator.py  test_progress.py  test_resource_policy.py  test_watcher.py
