[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memstrata"
version = "0.6.0"
description = "A local-first, verification-first context engine for AI workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "context", "memory", "mcp", "local-first", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # HTTP + FastAPI surface (dashboard, MCP routes, telemetry endpoints)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.10",

    # `requests` is used in the ingestion CLI, the retrieval HTTP path, and
    # the embedding worker for talking to Ollama. httpx covers the async
    # routes; requests covers the sync call sites that pre-date the FastAPI
    # surface (these are simpler synchronous POSTs from worker / CLI code).
    "requests>=2.31",

    # Local SQLite + vector storage.
    # Pinned exactly. The vec0 virtual-table module ships as a
    # platform-specific loadable extension binary inside the wheel;
    # a >= range lets pip pick different patch versions per platform
    # which has been seen to surface as silent NotSupportedError on
    # macOS runners (the binary loads but vec0 syntax fails to parse).
    "sqlite-vec==0.1.6",

    # Tree-sitter AST grounding (Layer 1).
    #
    # CRITICAL: pin core + every grammar EXACTLY.
    #
    # tree-sitter grammar wheels embed their parser binaries compiled
    # against a specific tree-sitter core ABI; the loader does not
    # check at runtime. A `>=0.23,<0.24` range still let pip resolve
    # different patch versions per platform in CI (e.g., 0.23.0 core
    # with 0.23.6 grammar) and we saw silent segfaults on Ubuntu +
    # Windows fatal access violations during AST parsing. Exact pins
    # eliminate the resolver variance.
    "tree-sitter==0.23.2",
    "tree-sitter-python==0.23.6",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",

    # MCP server (Anthropic-spec) for Claude Desktop / Cursor / etc.
    "mcp>=1.0",

    # Windows corporate-CA TLS verification fallback (used by the
    # OpenRouter pricing sync and BoC FX fetch). Soft dep — code paths
    # fall back to certifi when truststore isn't importable.
    "truststore>=0.9; python_version >= '3.10'",

    # Config + env loading
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]

[project.scripts]
memstrata = "memstrata.cli.main:main"

[project.urls]
Homepage = "https://memstrata.dev"
Repository = "https://github.com/yadu9989/memstrata"
Issues = "https://github.com/yadu9989/memstrata/issues"

[tool.setuptools.packages.find]
include = ["memstrata*"]
exclude = ["tests*", "browser-extension*"]

[tool.setuptools.package-data]
"memstrata.layer3.pricing" = ["pricing_matrix.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Narrow to rule categories that catch real bugs and modernization
# without flagging intentional patterns in the existing codebase.
# Disabled categories and the reasoning:
#   E (pycodestyle) — line length is the only one users hit, and we
#                     already declared line-length above; not enforcing
#                     a hard ceiling because the existing code has
#                     long-but-readable SQL strings + HTML literals.
#   E402 (import-not-at-top) — many wizards / api_server lazy-import
#                     deferred to avoid heavy startup imports.
#   F401 (unused-import) — many __init__.py files re-export via
#                     from-imports without __all__; legitimate.
#   F841 (unused-variable) — `with mock.patch(...) as _x:` patterns.
select = ["F", "I", "UP"]
ignore = ["F401", "F841"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_pro_overlay: test requires the memstrata-pro overlay; skipped on Open-only daemon",
    "requires_sqlite_vec: test requires the sqlite-vec extension to load + vec0 to be usable; skipped on platforms where the wheel doesn't load",
]
